--- a/Prosjekt-kopi/HHR/Main.storyboard
+++ b/Prosjekt-kopi/HHR/Main.storyboard
@@ -74,37 +74,39 @@
             <point key="canvasLocation" x="721" y="-1082"/>
         </scene>
         <!--Edit Description-->
-        <scene sceneID="Cbp-GN-6H5">
+        <scene sceneID="0ZW-kr-oga">
             <objects>
-                <viewController title="Edit Description" id="D8L-Hk-0F4" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Kum-Gs-eEe">
+                <viewController title="Edit Description" id="RDI-4j-j3j" customClass="EditDescriptioController" customModule="HHR" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="GZM-SV-6mF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="GS5-Ii-Gca">
-                                <rect key="frame" x="0.0" y="64" width="375" height="248"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="5Wi-K3-dg8">
+                                <rect key="frame" x="16" y="160" width="343" height="239"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MDN-cv-6pn">
-                                <rect key="frame" x="0.0" y="320" width="375" height="69"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kc9-I1-uVH">
+                                <rect key="frame" x="166" y="109" width="0.0" height="0.0"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
-                                <state key="normal" title="Save">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                            </button>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="cAX-PF-2cB"/>
+                        <viewLayoutGuide key="safeArea" id="HUY-cf-g4x"/>
                     </view>
+                    <connections>
+                        <outlet property="Description" destination="5Wi-K3-dg8" id="Cqi-Ho-RYq"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="vcd-dE-NOE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="izx-e2-cjt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="721" y="-373"/>
+            <point key="canvasLocation" x="740" y="-337.6847290640394"/>
         </scene>
         <!--About-->
         <scene sceneID="rhF-oJ-KEW">
@@ -304,12 +306,16 @@ www.Skillseed.com</string>
         <!--Settings-->
         <scene sceneID="xGV-40-9Te">
             <objects>
-                <navigationController id="Uxi-7K-rjg" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="settingsNav" id="Uxi-7K-rjg" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Settings" image="Settings" id="Eet-0n-ODI"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="B9Q-M7-KgC">
                         <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="9SL-ce-fbE">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="8ch-4H-7rz" kind="relationship" relationship="rootViewController" id="oGe-To-ngD"/>
                     </connections>
@@ -493,10 +499,10 @@ www.Skillseed.com</string>
             </objects>
             <point key="canvasLocation" x="-3946" y="-1476"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Custom Tab Bar-->
         <scene sceneID="7oD-kT-PiE">
             <objects>
-                <tabBarController storyboardIdentifier="tabBarController" id="QVh-tk-euT" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="tabBarController" id="QVh-tk-euT" customClass="CustomTabBar" customModule="HHR" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="AlM-Sa-EfS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -799,7 +805,7 @@ www.Skillseed.com</string>
         <!--Settings-->
         <scene sceneID="iKn-Zt-WxM">
             <objects>
-                <tableViewController id="8ch-4H-7rz" customClass="SettingsController" customModule="HHR" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="settingsMenu" id="8ch-4H-7rz" customClass="SettingsController" customModule="HHR" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Q8g-KO-fBb">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -824,7 +830,7 @@ www.Skillseed.com</string>
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="D8L-Hk-0F4" kind="show" id="c5G-by-fxp"/>
+                                            <segue destination="RDI-4j-j3j" kind="show" id="rhP-Kh-7hk"/>
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="qod-EK-pQd">
